User johns
Date:

    Add support for 4:3 output modes.
    Quicker auto-crop after channel switch.
    Add auto-crop support for Intel VA-API backend.
    Fix bug: Auto-Crop logo skip didn't use displayed width.
    Workaround for mpeg2 FFMpeg + VA-API + Intel GPU hung.
    Fix bug: Missing vaSyncSurface and vaDestroyImage.
    Fix bug: Only black picture with VA-API hw decoder.

User HelAu
Date: Mon Jan 30 16:54:47 CET 2012

    Add support to start the plugin in suspended mode.

User johns
Date: Mon Jan 30 15:58:21 CET 2012

    Finished rewrite of video code, to support output modules.
    Add aspect change support to software decoder path.
    Repair software decoder with vaapi vdpau backend.
    Add workaround for Intel VA-API MPEG GPU hung.

User johns
Date: Sat Jan 28 13:32:12 CET 2012

    Release Version 0.4.5
    Add configurable skip lines at video top and bottom.
    Add auto-crop tolerance configuration.
    Reduces audio latency, increases audio buffer time.
    Made video_test working again.
    Disabled VA-API Intel vaAssociateSubpicture workaround.
    Fix bug: Must release lock for VideoPollEvent.
    Allow faster video and audio sync.
    Fix bug: Software decoder use vaPutImage with intel backend.
    Fix bug: Artefacts are shown after mpeg2 channel switch.
    Fix bug: VideoReleaseSurface called after VideoExit.
    Support external players.
    Add VDPAU display preemption support.

User m.Rcu
Date: Tue Jan 24 22:38:30 CET 2012

    Add support for grab jpeg image.

User johns
Date: Tue Jan 24 22:25:33 CET 2012

    Fix bug: VaapiOsdExit doesn't deassociate osd surface.
    Fix bug: First OSD can show random pixels.
    Wait for X11 exit and kill it, if not.
    Fix still picture handling.
    Fix for dead-lock in VdpauExit.
    Workaround for dead-lock in VdpauExit.
    VDPAU: Add very primitive software scaler for grab image.
    VA-API: Add auto-crop support.
    Suspend can close/open X11 window, connection and audio device.

User Morone